--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
-    "@azure/functions": "^4.0.0",
+    "@azure/functions": "^4.5.0",
     "@sanity/client": "^6.20.1"
   },
   "devDependencies": {
-    "@types/node": "18.x",
-    "azure-functions-core-tools": "^4.x",
-    "rimraf": "^5.0.0",
-    "typescript": "^4.0.0"
+    "@types/node": "^20.14.5",
+    "azure-functions-core-tools": "^4.0.5801",
+    "rimraf": "^5.0.7",
+    "typescript": "^5.4.5"
   }
 }
